--- a/src/components/TitleCards/TitleCards.css
+++ b/src/components/TitleCards/TitleCards.css
@@ -28,10 +28,15 @@
 .card-list .card{
   position: relative;
 }
-.card-list.card p{
+.card-list .card p{
   position: absolute;
   bottom: 10px;
   right: 10px;
   text-decoration: none;
   color: aliceblue;
+  text-decoration: none;
+  color: white;
+}
+.card-list .card:hover{
+  opacity: 50%;
 }
